--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -59,7 +59,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
       - name: Install dependencies
-        run: pnpm ci
+        run: pnpm install
       - name: Build with Next.js
         run: pnpm next build
       - name: Upload artifact
